feat: Se agrego catalogo publico por unidad de negocio
